@@ -95,7 +95,7 @@ project(QosProfile_Test_Component_exec) : ciao_executor, dds4ccm_base {
   libpaths += ../lib
   libout = ../lib
   includes += ..
-  dynamicflags   = COMPONENT_EXEC_BUILD_DLL READER_STARTER_STUB_BUILD_DLL
+  dynamicflags   = COMPONENT_EXEC_BUILD_DLL
 
   IDL_Files {
   }
